--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -50,4 +51,9 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-urlconnection:3.12.6"
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.6"
     implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "androidx.room:room-runtime:2.2.6"
+    kapt "androidx.room:room-compiler:2.2.6"
+    implementation "androidx.room:room-ktx:2.2.6"
+    androidTestImplementation "androidx.room:room-testing:2.2.6"
+
 }
