--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,17 +43,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation 'androidx.fragment:fragment-ktx:1.3.3'
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation "com.squareup.okhttp3:okhttp-urlconnection:3.12.6"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.12.6"
-    implementation "com.github.bumptech.glide:glide:4.11.0"
-    implementation "androidx.room:room-runtime:2.2.6"
-    kapt "androidx.room:room-compiler:2.2.6"
-    implementation "androidx.room:room-ktx:2.2.6"
-    androidTestImplementation "androidx.room:room-testing:2.2.6"
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.12.6'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.6'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+
+    implementation 'androidx.room:room-ktx:2.3.0'
+
 
 }
