--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        production {
+            storeFile file('C:\\WorkFolder\\AndroidStudioProjects\\CinemaApp\\key\\keyProduction.jks')
+            storePassword 'keyProduction'
+            keyAlias 'keyProduction'
+            keyPassword 'keyProduction'
+        }
+    }
     compileSdk 31
 
     defaultConfig {
@@ -18,6 +26,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "boolean", "USE_LOG", "true"
+        manifestPlaceholders = [crashlyticsCollectionEnabled:"true"]
     }
 
     buildTypes {
@@ -25,6 +35,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        dev {
+            buildConfigField "boolean", "USE_LOG", "false"
+            manifestPlaceholders = [crashlyticsCollectionEnabled:"false"]
+        }
+
+        production {
+            signingConfig signingConfigs.production
+        }
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -39,10 +59,30 @@ android {
         }
     }
 
+    def MODE = "MODE"
+
+    flavorDimensions += "version"
+    productFlavors{
+        free{
+            //buildConfigField "boolean", MODE, '\"free"'
+            dimension = "version"
+            applicationIdSuffix = ".free"
+            versionNameSuffix = "-free"
+        }
+        paid{
+            //buildConfigField "boolean", MODE, '\"paid"'
+            dimension = "version"
+            applicationIdSuffix = ".paid"
+            versionNameSuffix = "-paid"
+        }
+
+    }
+
+    lint {
+        disable("ExtraTranslation")
+    }
+
 }
-//tasks.withType(Test) {
-//    useJUnitPlatform()
-//}
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
