--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,8 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-native-mt.'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0-native-mt'
     implementation 'androidx.room:room-runtime:2.4.1'
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
 
