--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'androidx.test:core:1.4.0'
     testImplementation 'org.junit.platform:junit-platform-commons:1.8.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
     androidTestImplementation 'org.testng:testng:6.9.6'
 
     androidTestImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
